--- a/src/core/templates/confirm_email.html
+++ b/src/core/templates/confirm_email.html
@@ -319,8 +319,7 @@
           <div class="content">
             <!-- START CENTERED WHITE CONTAINER -->
             <span class="preheader"
-              >This is preheader text. Some clients will show this text as a
-              preview.</span
+              >Email confirmation on the website ispent.ru</span
             >
             <table
               role="presentation"
@@ -332,7 +331,6 @@
               <!-- START MAIN CONTENT AREA -->
               <tr>
                 <td class="wrapper">
-                  <span>{{ body[0] }}</span>
                   <table
                     role="presentation"
                     border="0"
@@ -351,11 +349,19 @@
                           >
                             <tbody>
                               <tr>
-                                <td>
+                                <p
+                                >To confirm your email, click on the
+                                link:</p
+                                > </br>
+                                <p
+                                > https://ispent.ru/confirm/?token={{body[0]}}</p
+                                ></br>
+                                <p>or click on the button below</p> </br>
+                                </td>
                                   <a
-                                    href="http://htmlemail.io"
+                                    href="https://ispent.ru/confirm/?token={{body[0]}}"
                                     target="_blank"
-                                    >Call To Action</a
+                                    >Confirm E-mail</a
                                   >
                                 </td>
                               </tr>
@@ -365,7 +371,6 @@
                       </tr>
                     </tbody>
                   </table>
-                  <p>!</p>
                 </td>
               </tr>
 
